--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header> 
-        <h1>Header</h1> 
+        <h1>Feature branch</h1> 
     </header>
 
-    <footer>
-        <p>Footer</p>
-    </footer>
+
+
+
 </body>
 </html>
