--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <header> 
-        <h1>Feature branch</h1> 
+        <h1>Master</h1> 
     </header>
 
 
-
+    <footer>
+        <p>Masteris</p>
+    </footer>
 
 </body>
 </html>
